# summon-claude

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  prek.toml  pyproject.toml  slack-app-manifest.yaml
.claude-plugin/skills/summon/: SKILL.md
.github/: renovate.json
.github/workflows/: README.md  ci.yaml  docs.yaml  publish.yaml  renovate.yaml  slack-integration.yaml  spike-github-504.yaml
docs/: conftest.py  index.md  troubleshooting.md
docs/concepts/: security.md  slack-integration.md
docs/development/: contributing.md  releasing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  upgrading.md
docs/guide/: bug-hunter.md  canvas.md  configuration.md  doctor.md  full-setup.md  github-integration.md  hooks.md  index.md  jira-integration.md  pm-agents.md  projects.md  scribe-integrations.md  scribe.md  sessions.md
docs/reference/: commands.md  environment-variables.md  mcp-tools.md  permissions.md  prompts.md
scripts/: docs-screenshots.py  generate_commands_docs.py  generate_env_docs.py  generate_prompt_docs.py
src/summon_claude/: __init__.py  auth.py  bolt_router.py  canvas_mcp.py  channel_manager.py  cli.py  cli_config.py  commands.py  config.py  daemon.py  daemon_client.py  diagnostics.py  event_dispatcher.py  file_handler.py  github_auth.py  ipc.py  jira_auth.py  jira_proxy.py  mcp_tools.py  mcp_untrusted_proxy.py  permissions.py  rate_limiter.py  registry.py  session.py  session_manager.py  slack_browser.py  socket_health.py  streamer.py  summon_cli_mcp.py  thread_router.py
src/summon_claude/cli/: __init__.py  auth.py  config.py  daemon_client.py  db.py  formatting.py  google_auth.py  helpers.py  hooks.py  interactive.py  model_cache.py  project.py  reset.py  session.py  slack_auth.py  start.py  stop.py  update_check.py
src/summon_claude/providers/: __init__.py  base.py  slack.py
src/summon_claude/sandbox/: __init__.py  bug_hunter_memory.py  matchlock.py  transport.py
src/summon_claude/sessions/: auth.py  classifier.py  commands.py  context.py  hook_types.py  hooks.py  manager.py  mcp_health.py  migrations.py  permissions.py  registry.py  response.py  scheduler.py  session.py  types.py
src/summon_claude/sessions/prompts/: __init__.py  bug_hunter.py  global_pm.py  pm.py  scribe.py  shared.py
src/summon_claude/slack/: bolt.py  canvas_store.py  canvas_templates.py  client.py  formatting.py  markdown_split.py  mcp.py  router.py
tests/: conftest.py  helpers.py  test_ask_user.py  test_audit_log.py  test_auth.py  test_bolt_router.py  test_bug_hunter_profile.py  test_bug_hunter_prompts.py  test_build_config.py  test_canvas_store.py  test_canvas_templates.py  test_channel_manager.py  test_cli.py  test_cli_commands.py  test_cli_config.py  test_cli_db.py  test_cli_init.py  test_cli_interactive.py  test_cli_jira.py  test_cli_reset.py  test_cli_standards.py  test_command_inventory.py  test_commands.py  test_config.py  test_config_registry.py  test_config_xdg.py  test_context.py  test_cron_mcp.py  test_cron_task_integration.py  test_daemon.py  test_data_dir_isolation.py  test_diagnostics.py  test_diagnostics_guard.py  test_event_consumer.py  test_event_dispatcher.py  test_event_probe.py  test_file_handler.py  test_github_auth.py  test_global_pm.py  test_health.py  (+58 more)
tests/docs/: conftest.py  test_bash_codeblocks.py  test_cli_commands.py  test_configuration.py  test_env_vars.py  test_links.py  test_mcp_tools.py  test_permissions.py  test_prompts.py  test_python_codeblocks.py  test_session_commands.py
tests/integration/: conftest.py  test_browser_monitor.py  test_channel_lifecycle.py  test_channel_manager.py  test_channel_reuse.py  test_classifier_llm.py  test_event_delivery.py  test_interactivity.py  test_message_routing.py  test_permissions.py  test_resume_e2e.py  test_slack_client_topics.py  test_slack_provider.py  test_socket_mode.py  test_socket_resilience.py  test_turn_abort.py  test_zzz_channel_rename.py
