[project]
name = "summon-claude"
dynamic = ["version"]
description = "Bridge Claude Code sessions to Slack channels"
license = "MIT"
authors = [{name = "Will Gordon", email = "will@gordoncode.dev"}]
keywords = ["claude", "slack", "ai", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",  # required by slack-sdk's AsyncWebClient
    "packaging==26.0",
    "aiosqlite==0.22.1",
    "click==8.3.1",
    "claude-agent-sdk==0.1.39",
    "pydantic-settings==2.13.1",
    "python-daemon==3.1.2",
    "slack-bolt==1.27.0",
    "slack-sdk==3.40.1",
    "pick==2.6.0",
    "markdown-to-mrkdwn==0.3.1",
]

[project.urls]
Homepage = "https://github.com/wgordon17/summon-claude"
Repository = "https://github.com/wgordon17/summon-claude"
"Bug Tracker" = "https://github.com/wgordon17/summon-claude/issues"

[project.scripts]
summon = "summon_claude.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summon_claude"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pyright==1.1.408",
    "pyyaml==6.0.3",
    "ruff==0.15.2",
]

# ============================================================================
# RUFF
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "T10",   # flake8-debugger (catch debugger/breakpoint)
    "T20",   # flake8-print (catch print statements)
    "S",     # flake8-bandit (security checks)
    "DTZ",   # flake8-datetimez (timezone-aware datetimes)
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie (misc lints)
    "PT",    # flake8-pytest-style
    "A",     # flake8-builtins (shadowing builtins)
    "ASYNC", # async-specific checks
    "ARG",   # flake8-unused-arguments
    "RET",   # flake8-return
    "RSE",   # flake8-raise (better exception raising)
    "TID",   # flake8-tidy-imports (banned imports)
    "ISC",   # flake8-implicit-str-concat
    "PTH",   # flake8-use-pathlib (use Path instead of os.path)
    "PL",    # Pylint rules
    "SLF",   # flake8-self (private member access)
]
ignore = [
    "RUF012",  # Mutable class attributes (common pattern with frozenset)
    "PLR2004", # Allow magic values - buffer sizes and limits are self-documenting
]

[tool.ruff.lint.per-file-ignores]
# CLI: click.echo for output; slack handler unused args; cmd_start has many required statements
"src/summon_claude/cli/__init__.py" = ["ARG001", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]
# cli/stop: async_stop has many branches/returns (interactive + stop_all + single session)
"src/summon_claude/cli/stop.py" = ["PLR0911", "PLR0912"]
# cli/session: session_logs_impl has many branches/returns; cleanup has many branches/statements
"src/summon_claude/cli/session.py" = ["PLR0911", "PLR0912", "PLR0915"]
# cli/config: config_check has many validation branches by design
"src/summon_claude/cli/config.py" = ["PLR0912", "PLR0915"]
# Manager: _dispatch_control match arms each return
"src/summon_claude/sessions/manager.py" = ["PLR0911"]
# Session: asserts in private methods; slack handler signatures
"src/summon_claude/sessions/session.py" = ["S101", "SIM105", "ARG001", "ARG002", "PLR0913", "RET504"]
# Permissions: action_id is part of public API signature (reserved for future routing)
"src/summon_claude/sessions/permissions.py" = ["ARG002"]
# Registry: dynamic SET clause is safe (column names from allowlist); SIM105
"src/summon_claude/sessions/registry.py" = ["S608", "SIM105"]
# Update checker: urlopen with hardcoded PyPI URL is safe; print-like output via click.echo
"src/summon_claude/cli/update_check.py" = ["S310"]
# Tests: asserts, magic values, hardcoded tokens, subprocess calls, random, deferred imports, asyncio tasks
"tests/**/*.py" = [
    "S101",    # assert is standard in tests
    "S105", "S106",  # hardcoded passwords/tokens are test fixtures
    "S108",    # temp file paths in tests
    "S311",    # random.random() fine in tests
    "S607",    # partial subprocess path fine in tests
    "PLR2004", # magic values are readable in tests
    "PLW1510", # subprocess.run check= fine in tests
    "PLC0415", # deferred imports acceptable in tests
    "ARG",     # unused args (fixtures, parametrize)
    "T201",    # print acceptable in tests
    "SLF001",  # private access needed in tests
    "RUF059",  # unused unpack in mock tuples
    "RUF006",  # asyncio.create_task without storing ref (fire-and-forget in tests)
    "ASYNC",   # blocking I/O in async tests is fine for trivial setup
    "PT",      # pytest style (we use class-based tests)
    "C408",    # dict() calls in tests are readable
    "RET504",  # unnecessary assignment before return in fixtures
    "F401",    # unused imports sometimes kept for re-export
]
"tests/conftest.py" = [
    "S101", "S105", "S106", "S108", "PLR2004", "ARG", "SLF001", "RET504",
]

[tool.ruff.lint.isort]
known-first-party = ["summon_claude", "helpers"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# ============================================================================
# PYRIGHT
# ============================================================================

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/tests",
]
reportMissingImports = false       # claude_agent_sdk has no py.typed marker
reportMissingTypeStubs = false     # slack_sdk, slack_bolt don't ship stubs

# ============================================================================
# PYTEST
# ============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["tests"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-p", "no:pastebin",
    "-p", "no:junitxml",
]
cache_dir = ".cache/pytest"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "slack: marks tests requiring real Slack workspace credentials (deselect with '-m \"not slack\"')",
]
norecursedirs = [".cache", ".git"]
